# Projeto_CRUD

./: pyproject.toml
frontend/: Dockerfile
